<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>safety_monitor</name>
  <version>1.0.0</version>
  <description>Collision Monitor</description>
  <maintainer email="alexey.merzlyakov@samsung.com">Alexey Merzlyakov</maintainer>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>safety_monitor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>nav2_common</depend>
  <depend>nav2_util</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
