<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>safety_monitor_msgs</name>
  <version>1.0.0</version>
  <description>Msgs for safety_monitor</description>
  <maintainer email="tony.najjar@logivations.com">Tony Najjar</maintainer>
  <license>Apache License 2.0</license>
  <author email="tony.najjar@logivations.com">Tony Najjar</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>
  <depend>rosidl_default_generators</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>